popup overflow on show added, bug fixed

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -62,6 +62,12 @@ body {
     @include lg {
         text-align: center;
     }
+
+    @include mdOnly {
+        flex-wrap: wrap;
+        flex-direction: row;
+        flex: 1;
+    }
 }
 
 .nav__item {
@@ -72,6 +78,11 @@ body {
 
     &:hover {
         color: var(--aux-main);
+    }
+
+    @include mdOnly {
+        flex: none;
+        width: 49%;
     }
 }
 
@@ -90,6 +101,10 @@ body {
     margin-left: auto;
     margin-right: auto;
     background-color: var(--white);
+}
+
+.body--non-overflow {
+    overflow: hidden;
 }
 
 // header
